fix hidden nav links in dark mode

--- a/public_html/_assets/stylesheets/blog_note_entry_noscript.css
+++ b/public_html/_assets/stylesheets/blog_note_entry_noscript.css
@@ -29,6 +29,7 @@
   }
   a:hover {
     color: black;
+    background-color: rgb(255, 234, 176);
   }
   .h-entry, #comments, #webmentions {
     background-color: rgb(22, 21, 21);
