--- a/public_html/_assets/stylesheets/blog_note_entry_theme.css
+++ b/public_html/_assets/stylesheets/blog_note_entry_theme.css
@@ -20,6 +20,7 @@
 }
 .dark-mode a:hover {
   color: black;
+  background-color: rgb(255, 234, 176);
 }
 .dark-mode .h-entry, .dark-mode #comments, .dark-mode #webmentions {
   background-color: rgb(22, 21, 21);
