--- a/resources/scss/blog/notes/_colors/_entry_dark.scss
+++ b/resources/scss/blog/notes/_colors/_entry_dark.scss
@@ -10,6 +10,7 @@
         color: $dark-link-color;
         &:hover {
             color: black;
+            background-color: $dark-link-hover-bg-color;
         }
     }
     .h-entry, #comments, #webmentions {
